# Ghidra-to-LLVM

./: .gitignore  README.md  config.json  g2llvm.py  g2llvm_new.py  pyproject.toml  settings.toml
src/: FindWarnings.java  GhidraToXML.java  InspectPcodes.java  InstructionInspector.java  getPcode.java  lifting_opt_verify.py  xmltollvm.py
